[package]
name = "rotary-encoder-async"
description = "An async rotary encoder driver for embedded devices"
version = "0.1.0"
edition = "2021"
authors = ["Sycrosity"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/embedevices-rs/rotary-encoder-async"
readme = "README.md"

[dependencies]
